--- a/src/index.css
+++ b/src/index.css
@@ -124,82 +124,6 @@ button {
   text-transform: uppercase;
 }
 
-/* HOME */
-.home {
-  padding-top: 210px;
-  height: 100vh;
-  position: relative;
-  background-image: url('./assets/backgrounds/main-bg.webp');
-  background-size: cover;
-}
-.home-bg {
-  position: absolute;
-}
-
-.home_cta {
-  max-width: 880px;
-  display: flex;
-  flex-direction: column;
-}
-
-.home_cta-text {
-  color: var(--typography-white);
-  font-family: Nohemi;
-  font-size: 36px;
-  font-weight: 600;
-  line-height: 93%;
-  text-align: left;
-  text-transform: uppercase;
-}
-
-.home_cta-button {
-  display: block;
-  text-align: center;
-  cursor: pointer;
-  background-color: inherit;
-  margin-top: 30px;
-  padding: 20px 30px;
-  color: var(--typography-white);
-  border-color: var(--typography-white);
-  border: 2px solid rgb(244, 245, 240);
-  text-transform: uppercase;
-  font-family: Nohemi;
-  font-size: 32px;
-  font-weight: 400;
-  line-height: 93%;
-}
-
-.home_middle-block {
-  margin-top: 90px;
-  display: flex;
-  gap: 125px;
-}
-
-.home_middle-block-image {
-  max-width: 880px;
-  height: 417px;
-}
-
-.home_middle-block-text-wrapper {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 100.52%;
-  font-family: Nohemi;
-  color: var(--typography-white);
-  margin-top: 40px;
-}
-
-.home_middle-block-text1,
-.home_middle-block-text2 {
-  width: 315px;
-  display: block;
-  margin-top: 40px;
-}
-
-.home_middle-block-arrow {
-  margin-top: 40px;
-}
-
 /* HEADER */
 /* HEADER */
 /* HEADER */
@@ -234,6 +158,7 @@ button {
 .header-logo {
   width: 90px;
   height: 87px;
+  fill: var(--primary-white);
 }
 
 .header-nav__list {
@@ -261,6 +186,7 @@ button {
   letter-spacing: 0%;
   text-align: left;
   text-transform: uppercase;
+  transition: 300ms;
 }
 
 .header-nav__link:hover {
@@ -272,7 +198,7 @@ button {
   top: 50%;
   transform: translateY(-50%);
 
-  transition: 600ms;
+  transition: left 500ms;
 }
 
 .header-nav__bracket:first-child {
@@ -298,10 +224,10 @@ button {
   0% {
     opacity: 1;
   }
-  10% {
+  5% {
     opacity: 0;
   }
-  90% {
+  95% {
     opacity: 1;
   }
 }
@@ -334,10 +260,12 @@ button {
 .header-social__icon {
   width: 24px;
   height: 24px;
+  fill: white;
+  transition: 300ms;
 }
 
 .header-social__icon:hover {
-  stroke: rgb(208, 56, 10);
+  fill: var(--primary-orange);
 }
 
 .header-btn {
@@ -378,6 +306,92 @@ button {
 .header-btn__wisible {
   pointer-events: all;
   opacity: 1;
+}
+
+/* HOME */
+
+.home {
+  padding-top: 210px;
+  padding-bottom: 30px;
+  min-height: 100vh;
+  position: relative;
+  background-image: url('./assets/backgrounds/main-bg.webp');
+  background-size: cover;
+}
+.home-bg {
+  position: absolute;
+}
+
+.home_cta {
+  max-width: 880px;
+  display: flex;
+  flex-direction: column;
+}
+
+.home_cta-text {
+  display: block;
+  height: 70px;
+  color: var(--typography-white);
+  font-family: Nohemi;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 93%;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.home_cta-button {
+  display: block;
+  text-align: center;
+  cursor: pointer;
+  background-color: inherit;
+  margin-top: 30px;
+  padding: 20px 30px;
+  color: var(--typography-white);
+  border-color: var(--typography-white);
+  border: 2px solid rgb(244, 245, 240);
+  text-transform: uppercase;
+  font-family: Nohemi;
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 93%;
+
+  transition: 300ms;
+}
+
+.home_cta-button:hover {
+  background-color: var(--primary-orange);
+}
+
+.home_middle-block {
+  margin-top: 90px;
+  display: flex;
+  gap: 125px;
+}
+
+.home_middle-block-image {
+  max-width: 880px;
+  height: 417px;
+}
+
+.home_middle-block-text-wrapper {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 100.52%;
+  font-family: Nohemi;
+  color: var(--typography-white);
+  margin-top: 40px;
+}
+
+.home_middle-block-text1,
+.home_middle-block-text2 {
+  width: 315px;
+  display: block;
+  margin-top: 40px;
+}
+
+.home_middle-block-arrow {
+  margin-top: 40px;
 }
 
 /* ABOUT */
@@ -550,6 +564,27 @@ button {
   line-height: 24px;
 }
 
+.event-register-form_input-label {
+  position: relative;
+  overflow: hidden;
+}
+
+.event-register-form_input-label::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: -200px;
+  display: block;
+  min-width: 200px;
+  min-height: 1px;
+  border-bottom: 2px solid var(--primary-white);
+  transition: 300ms;
+}
+
+.event-register-form_input-label:focus-within::before {
+  left: 0;
+}
+
 .event-register-form_input::placeholder {
   color: var(--typography-grey);
   font-family: Nohemi;
@@ -575,7 +610,17 @@ button {
   font-weight: 600;
   line-height: 93%;
   text-transform: uppercase;
+  border: none;
+
+  transition: 300ms;
 }
+
+.event-register-form_button:hover {
+  background-color: var(--primary-orange);
+  color: var(--typography-white);
+}
+
+/* HERO */
 
 .hero {
   display: flex;
@@ -607,8 +652,24 @@ button {
 /* OUR MUSICIANS */
 
 .our-musicians {
+  position: relative;
   padding-top: 140px;
+  overflow: hidden;
 }
+
+.our-musicians::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-size: cover;
+  background-image: url('./assets/backgrounds/bg-barramundi.webp');
+  opacity: 0.2;
+  z-index: -1;
+}
+
 .our-musicians-spacing {
   margin-top: 30px;
   display: flex;
@@ -632,11 +693,13 @@ button {
 }
 
 .our-musicians_card-image {
+  object-fit: cover;
   width: 315px;
   height: 324px;
 }
 
 .our-musicians_card-info {
+  margin-top: 15px;
   display: flex;
   justify-content: space-between;
 }
@@ -666,9 +729,17 @@ button {
   margin-top: 30px;
   padding: 20px 30px;
   border: 2px solid var(--typography-white);
+  color: var(--typography-white);
+  fill: var(--typography-white);
+  transition: 300ms;
 }
 .our-musicians_card-button:visited {
   color: inherit;
+}
+.our-musicians_card-button:hover {
+  border-color: var(--primary-orange);
+  color: var(--primary-orange);
+  fill: var(--primary-orange);
 }
 
 .our-musicians_card-button-svg {
@@ -742,20 +813,6 @@ button {
   width: 873px;
 }
 
-.workWithUs-subTitle {
-  display: flex;
-  height: 100%;
-
-  color: var(--typography-grey);
-  font-family: Nohemi;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 150%;
-  letter-spacing: -1.1%;
-  text-align: left;
-  text-transform: uppercase;
-}
-
 .workWithUs-title {
   display: block;
   width: 537px;
@@ -787,9 +844,9 @@ button {
   padding: 0;
 
   background-color: inherit;
-  border: 3px solid rgb(244, 245, 240);
+  border: 3px solid var(--primary-white);
 
-  color: rgb(244, 245, 240);
+  color: var(--primary-white);
   font-family: Nohemi;
   font-size: 24px;
   font-weight: 600;
@@ -797,6 +854,17 @@ button {
   letter-spacing: 0%;
   text-align: left;
   text-transform: uppercase;
+  transition: 300ms;
+}
+
+.workWithUs-btn:hover {
+  color: var(--primary-orange);
+  border-color: var(--primary-orange);
+  fill: var(--primary-orange);
+}
+
+.workWithUs-btn:hover svg {
+  fill: var(--primary-orange);
 }
 
 .workWithUs-icon {
@@ -804,9 +872,8 @@ button {
   width: 29px;
   height: 29px;
   margin-left: 10px;
-
-  fill: white;
-  stroke: white;
+  fill: var(--primary-white);
+  transition: 150ms;
 }
 
 /* NEWS */
@@ -818,6 +885,15 @@ button {
   padding-bottom: 80px;
 }
 
+.news-logo {
+  position: absolute;
+  width: 48px;
+  height: 46px;
+  right: 20px;
+  bottom: 20px;
+  fill: var(--primary-red);
+}
+
 .slider-wrapper {
   max-width: 1440px;
   margin-top: 50px;
@@ -825,6 +901,10 @@ button {
 
 .slick-slide > div {
   margin: 0 10px;
+}
+
+.slick-dots > li > button {
+  transition: 300ms;
 }
 
 .slick-dots > li > button:before {
@@ -836,69 +916,60 @@ button {
 }
 
 .slider_card {
-  width: 500px;
-  height: 500px;
-  border: 2px solid var(--primary-white);
-  padding: 20px 20px;
-}
-
-.slider_image {
-  background-image: url('./assets/backgrounds/event-text-card.webp');
-  background-size: contain;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-}
-
-/* .slider-wrapper {
   position: relative;
-  max-width: 1320px;
-  margin: 0 auto;
-}
-
-.slider {
-  display: flex;
-  gap: 20px;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-}
-
-.slider_card {
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  height: 420px;
   border: 2px solid var(--primary-white);
-  scroll-snap-align: start;
   padding: 20px 20px;
+
+  transition: 300ms;
+}
+
+.slider_card:hover {
+  border-color: var(--primary-orange);
 }
 
 .slider_image {
-  width: 460px;
-  height: 220px;
-  flex: 1 0 100%;
+  width: 100%;
+  height: 40%;
   object-fit: cover;
 }
 
-.slider-nav {
+.slider_text-block {
+  margin-top: 42px;
   display: flex;
-  column-gap: 1rem;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
+  flex-direction: column;
+  justify-content: space-between;
+  height: 50%;
 }
 
-.slider-nav a {
-  width: 0.5rem;
-  height: 0.5rem;
-  border-radius: 50%;
-  background-color: var(--primary-white);
-  opacity: 0.75;
-  transition: opacity ease 250ms;
+.slider_text-header {
+  color: var(--primary-red);
+  font-family: Nohemi;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 14px;
+  text-align: left;
+  text-transform: uppercase;
 }
 
-.slider-nav a:hover,
-.slider-nav a:focus {
-  opacity: 1;
-} */
+.slider_text-info {
+  margin-top: 20px;
+  color: var(--typography-white);
+  font-family: Nohemi;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 100.52%;
+  text-align: left;
+}
+
+.slider_text-date {
+  color: var(--typography-grey);
+  font-family: Nohemi;
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 11px;
+}
 
 /* OUR TEAM */
 /* OUR TEAM */
@@ -982,20 +1053,33 @@ button {
 }
 
 .our-team_info {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 220px;
   margin-top: 60px;
-  display: flex;
-  justify-content: space-between;
 }
 
-.our-team_info-spacing {
+.our-team_info-wrapper {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-}
-.our-team_info-behind-the-scenes {
-  width: 225px;
+  flex-wrap: wrap;
+  width: 985px;
+  height: 100%;
 }
 
-.our-team_info-behind-the-scenes_header {
+.our-team_info-upper-section {
+  display: flex;
+  width: 100%;
+  height: 128px;
+}
+
+.our-team_info-upper-section_header {
+  display: flex;
+  width: 223px;
+  height: 100%;
+
   color: var(--typography-white);
   font-family: Nohemi;
   font-size: 32px;
@@ -1005,41 +1089,177 @@ button {
   text-transform: uppercase;
 }
 
-.four-team_info-behind-the-scenes-spacing {
+.our-team_info-bottom-section {
+  display: flex;
+  width: 100%;
+  height: 70px;
+}
+
+.four-team_info-bottom-section-spacing {
   display: flex;
   gap: 20px;
 }
 
-.our-team_info-behind-the-scenes_button {
+.our-team_info-bottom-section_button {
   width: 92px;
   height: 64px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
   padding: 20px 20px;
   border: 2px solid var(--typography-white);
+  color: var(--typography-white);
+
+  fill: var(--typography-white);
+
+  transition: 300ms;
 }
 
-.our-team_info-behind-the-scenes_link-svg {
+.our-team_info-bottom-section_button:hover {
+  border-color: var(--primary-orange);
+  fill: var(--primary-orange);
+}
+
+.our-team_info-bottom-section_link-svg {
   width: 24px;
   height: 24px;
 }
 
-.our-team_info-text1,
-.our-team_info-text2 {
-  width: 315px;
+.our-team_info-section_text-list {
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
-  color: var(--typography-white);
+  width: 650px;
+  height: 100%;
+  margin-left: auto;
+}
+
+.our-team_info-section_text-item {
+  width: 315px;
+
+  color: rgb(244, 245, 240);
   font-family: Nohemi;
   font-size: 14px;
   font-weight: 400;
   line-height: 100.52%;
+  letter-spacing: 0%;
   text-align: left;
 }
 
+/* FOOTER */
+/* FOOTER */
+/* FOOTER */
+
+.footer {
+  width: 100%;
+  height: 472px;
+  padding: 30px 0;
+}
+
+.footer .container {
+  display: flex;
+  height: 100%;
+}
+
+.footer-title__wrapper {
+  display: flex;
+  width: 315px;
+  min-height: 100%;
+  padding: 39px 53px 0 0;
+  border: 2px solid var(--typography-grey);
+  border-bottom: 0;
+  border-left: 0;
+}
+
+.footer-title {
+  color: rgb(244, 245, 240);
+  font-family: Nohemi;
+  font-size: 96px;
+  font-weight: 600;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.footer-title__span {
+  font-size: 32px;
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  border-top: 2px solid var(--typography-grey);
+}
+
+.footer-content__title-wrapper {
+  display: flex;
+  width: 100%;
+  height: 412px;
+  border-bottom: 2px solid var(--typography-grey);
+}
+
+.footer-content__title {
+  width: 140px;
+  margin: auto 0 29px auto;
+
+  color: rgb(244, 245, 240);
+  font-family: Nohemi;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0%;
+  text-align: right;
+  text-transform: uppercase;
+}
+
+.footer-content__links {
+  display: flex;
+  width: 100%;
+  height: 124px;
+  align-items: center;
+}
+
+.footer-content__links-list {
+  display: flex;
+  width: 112px;
+  gap: 20px;
+  margin-left: 53px;
+}
+
+.footer-content__links-icon {
+  width: 24px;
+  height: 24px;
+
+  fill: var(--typography-grey);
+  cursor: pointer;
+  transition: 300ms;
+}
+
+.footer-content__links-icon:hover {
+  fill: var(--primary-orange);
+}
+
+.footer-content__links-date {
+  margin-left: auto;
+
+  color: rgb(64, 65, 60);
+  font-family: Nohemi;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: uppercase;
+  transition: 300ms;
+}
+
+.footer-content__links-date:hover {
+  color: var(--primary-orange);
+}
+
+/* SCROLLBAR */
+/* SCROLLBAR */
 /* SCROLLBAR */
 
 ::-webkit-scrollbar {
