--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -59,7 +59,7 @@
 }
 
 .home_middle-block-image {
-  max-width: 880px;
+  width: 880px;
   height: 417px;
 }
 
@@ -81,4 +81,18 @@
 
 .home_middle-block-arrow {
   margin-top: 40px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1439px) {
+  .home_middle-block {
+    margin-top: 90px;
+    display: flex;
+    flex-direction: column;
+    gap: 125px;
+  }
+
+  .home_middle-block-image {
+    width: 440px;
+    height: 209px;
+  }
 }
