--- a/src/components/work-with-us/work-with-us.css
+++ b/src/components/work-with-us/work-with-us.css
@@ -1,7 +1,7 @@
 .workWithUs {
   display: flex;
 
-  width: 1440px;
+  max-width: 1440px;
   height: 634px;
   margin: 0 auto;
   padding: 52px 0 80px 0;
@@ -44,7 +44,8 @@
   width: 315px;
   height: 159px;
   margin-top: auto;
-  margin-left: 102px;
+  /* margin-left: 102px; */
+  margin-left: auto;
   padding: 0;
 
   background-color: inherit;
