--- a/src/components/our-musicians/our-musicians.css
+++ b/src/components/our-musicians/our-musicians.css
@@ -33,6 +33,8 @@
   right: 0;
   bottom: 0;
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   opacity: 0.2;
   z-index: -1;
 }
