--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import './base.css';
 @import './components/header/header.css';
 @import './components/home/home.css';
-@import './components/about-event/about-event.css';
+@import './components/about/about.css';
+@import './components/event/event.css';
 @import './components/hero-block/hero-block.css';
 @import './components/our-musicians/our-musicians.css';
 @import './components/work-with-us/work-with-us.css';
