--- a/src/components/event/event.css
+++ b/src/components/event/event.css
@@ -1,12 +1,16 @@
+.section {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
 .event-cards {
   display: flex;
   gap: 20px;
 }
 
-.container-event-spacing {
-  margin-top: 80px;
+.event-block {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: end;
 }
 
 .event-cards_date-card {
@@ -177,6 +181,10 @@
   border: none;
 
   transition: 300ms;
+}
+
+.event-register-form_button {
+  max-width: 984px;
 }
 
 .event-register-form_button:hover {
