--- a/src/components/hero-block/hero-block.css
+++ b/src/components/hero-block/hero-block.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 90px;
+  padding: 80px 0;
 }
 
 .hero-background {
@@ -13,7 +13,7 @@
 .hero_span {
   color: var(--typography-white);
   font-family: Nohemi;
-  font-size: 36px;
+  font-size: 32px;
   font-weight: 600;
   line-height: 100.52%;
   text-align: center;
@@ -21,13 +21,21 @@
 }
 
 .hero_image {
-  width: 904px;
-  height: 176px;
+  width: 100%;
+  max-width: 458px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1439px) {
   .hero_image {
-    width: 452px;
     height: 88px;
+  }
+  .hero_span {
+    font-size: 36px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .hero_image {
+    width: 904px;
+    height: 176px;
   }
 }
