fixed some sizes

--- a/src/components/work-with-us/work-with-us.css
+++ b/src/components/work-with-us/work-with-us.css
@@ -13,7 +13,7 @@
 
 .workWithUs-titles__wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 873px;
 }
 
